[project]
name = "envisec"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "~=3.11.0"
dependencies = [
    "flask~=3.0",
    "imbalanced-learn~=0.12",
    "imblearn~=0.0",
    "numpy~=1.24",
    "pandas~=2.0",
    "pyyaml~=6.0",
    "schedule~=1.1",
    "scikit-learn~=1.0",
    "seaborn~=0.13.2",
    "tensorflow>=2.13,<3",
    "keras~=3.8",
    "matplotlib~=3.10",
    "tqdm~=4.67",
    "neptune~=1.13",
    "neptune-tensorflow-keras~=2.2",
    "neptune-sklearn~=2.1",
    "ipykernel~=6.29",
    "pip~=25.0",
]

# "flask==3.0.3",
# "imbalanced-learn==0.12.3",
# "imblearn==0.0",
# "ipython==8.12.3",
# "numpy==1.24.3",
# "pandas==2.0.3",
# "pyyaml==6.0.2",
# "schedule==1.1.0",
# "scikit-learn==1.0.2",
# "seaborn==0.13.2",
# "tensorflow~=2.15",
# "matplotlib>=3.10.0,<4",
# "tqdm>=4.67.1,<5",
# "tensorrt-cu11>=10.8.0.43,<11",
# "neptune>=1.13.0,<2",
# "neptune-tensorflow-keras>=2.2.2,<3",
# "neptune-sklearn>=2.1.4,<3",

[tool.pixi.project]
channels = ["conda-forge"]
platforms = ["linux-64", "win-64"]

[tool.pixi.pypi-dependencies]
envisec = { path = ".", editable = true }

[tool.pixi.tasks]

[tool.pixi.system-requirements]
cuda = "11.8"
