[project]
name = "envisec"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "~=3.11.0"
dependencies = [
    "flask~=3.0",
    "imbalanced-learn~=0.12",
    "imblearn~=0.0",
    "numpy~=1.24",
    "pandas~=2.0",
    "pyyaml~=6.0",
    "schedule~=1.1",
    "scikit-learn~=1.0",
    "seaborn~=0.13.2",
    "tensorflow>=2.16.1,<3",
    "keras~=3.8",
    "matplotlib~=3.10",
    "tqdm~=4.67",
    "neptune~=1.13",
    "neptune-tensorflow-keras~=2.2",
    "neptune-sklearn~=2.1",
    "ipykernel~=6.29",
    "pip~=25.0",
    "joblib~=1.4.2",
]

[tool.pixi.project]
channels = ["conda-forge"]
platforms = ["linux-64", "win-64"]

[tool.pixi.pypi-dependencies]
envisec = { path = ".", editable = true }

[tool.pixi.tasks]

[tool.pixi.system-requirements]
cuda = "11.8"
